modified:   15. Text Files/Streams.ipynb

--- a/15. Text Files/Streams.ipynb
+++ b/15. Text Files/Streams.ipynb
@@ -445,6 +445,89 @@
    "source": [
     "<br>"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Streams in .NET – Basic Classes"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "In $.NET\\,\\,Framework$ classes for working with **streams** are located in the namespace `System.IO`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "We can distinguish **two main types of streams** \n",
+    "1. those that work with **binary** data\n",
+    "2. those that work with **text** data. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The main classes in the `System.IO` namespace are: \n",
+    "1. `Stream` (abstract base class for all streams)\n",
+    "2. `BufferedStream`\n",
+    "3. `FileStream`, \n",
+    "4. `MemoryStream`, \n",
+    "5. `GZipStream` \n",
+    "6. `NetworkStream`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "All streams in C# share one thing in common – it is **mandatory to close them** after we have finished working with them. Otherwise, we risk damaging the data in the stream or file that we have opened."
+   ]
   }
  ],
  "metadata": {
