modified:   15. Text Files/Streams.ipynb

--- a/15. Text Files/Streams.ipynb
+++ b/15. Text Files/Streams.ipynb
@@ -506,12 +506,12 @@
    },
    "source": [
     "The main classes in the `System.IO` namespace are: \n",
-    "1. `Stream` (abstract base class for all streams)\n",
-    "2. `BufferedStream`\n",
-    "3. `FileStream`, \n",
-    "4. `MemoryStream`, \n",
-    "5. `GZipStream` \n",
-    "6. `NetworkStream`."
+    "1. [Stream (abstract base class for all streams)](https://learn.microsoft.com/en-us/dotnet/api/system.io.stream?view=net-7.0)\n",
+    "2. [BufferedStream](https://learn.microsoft.com/en-us/dotnet/api/system.io.bufferedstream?view=net-7.0)\n",
+    "3. [FileStream](https://learn.microsoft.com/en-us/dotnet/api/system.io.filestream?view=net-7.0)\n",
+    "4. [MemoryStream](https://learn.microsoft.com/en-us/dotnet/api/system.io.memorystream?view=net-7.0)\n",
+    "5. [GZipStream](https://learn.microsoft.com/en-us/dotnet/api/system.io.compression.gzipstream?view=net-7.0)\n",
+    "6. [NetworkStream.](https://learn.microsoft.com/en-us/dotnet/api/system.net.sockets.networkstream?view=net-7.0)"
    ]
   },
   {
