modified:   15. Text Files/Streams.ipynb

--- a/15. Text Files/Streams.ipynb
+++ b/15. Text Files/Streams.ipynb
@@ -488,23 +488,6 @@
     }
    },
    "source": [
-    "We can distinguish **two main types of streams** \n",
-    "1. those that work with **binary** data\n",
-    "2. those that work with **text** data. "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
     "The main classes in the `System.IO` namespace are: \n",
     "1. [Stream (abstract base class for all streams)](https://learn.microsoft.com/en-us/dotnet/api/system.io.stream?view=net-7.0)\n",
     "2. [BufferedStream](https://learn.microsoft.com/en-us/dotnet/api/system.io.bufferedstream?view=net-7.0)\n",
@@ -527,6 +510,116 @@
    },
    "source": [
     "All streams in C# share one thing in common – it is **mandatory to close them** after we have finished working with them. Otherwise, we risk damaging the data in the stream or file that we have opened."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Binary and Text Streams"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "we can divide the streams into **two large groups** according to the type of data that we deal with:\n",
+    "1. those that work with **binary** data\n",
+    "2. those that work with **text** data. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Binary Streams"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Binary streams, as their name suggests, work with **binary (raw) data** and they can be used to read information from all sorts of files (*images*, *music* and *multimedia files*, *text files* etc.)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The main classes that we use to **read and write from and to binary streams** are: \n",
+    "- [FileStream](https://learn.microsoft.com/en-us/dotnet/api/system.io.filestream?view=net-7.0)\n",
+    "- [BinaryReader](https://learn.microsoft.com/en-us/dotnet/api/system.io.binaryreader?view=net-7.0)\n",
+    "- [BinaryWriter](https://learn.microsoft.com/en-us/dotnet/api/system.io.binaryreader?view=net-7.0)"
    ]
   }
  ],
