modified:   15. Text Files/Streams.ipynb

--- a/15. Text Files/Streams.ipynb
+++ b/15. Text Files/Streams.ipynb
@@ -601,7 +601,7 @@
     }
    },
    "source": [
-    "Binary streams, as their name suggests, work with **binary (raw) data** and they can be used to read information from all sorts of files (*images*, *music* and *multimedia files*, *text files* etc.)"
+    "**Binary streams**, as their name suggests, work with **binary (raw) data** and they can be used to read information from all sorts of files (*images*, *music* and *multimedia files*, *text files* etc.)"
    ]
   },
   {
