modified:   15. Text Files/Streams.ipynb

--- a/15. Text Files/Streams.ipynb
+++ b/15. Text Files/Streams.ipynb
@@ -616,10 +616,239 @@
     }
    },
    "source": [
-    "The main classes that we use to **read and write from and to binary streams** are: \n",
+    "The main classes that we use to **read and write from and to binary streams** are: "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "- [FileStream](https://learn.microsoft.com/en-us/dotnet/api/system.io.filestream?view=net-7.0)\n",
-    "- [BinaryReader](https://learn.microsoft.com/en-us/dotnet/api/system.io.binaryreader?view=net-7.0)\n",
-    "- [BinaryWriter](https://learn.microsoft.com/en-us/dotnet/api/system.io.binaryreader?view=net-7.0)"
+    "  - Provides us with various **methods** for reading and writing from a binary file, such as:\n",
+    "    - reading / writing one byte and/or a sequence of bytes\n",
+    "    - skipping a number of bytes \n",
+    "    - checking the number of bytes available\n",
+    "    - closing the stream"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "- [BinaryWriter](https://learn.microsoft.com/en-us/dotnet/api/system.io.binarywriter?view=net-7.0)\n",
+    "  - Provides a **method** to write primitive types and binary values in a specific encoding to a stream :\n",
+    "    - `Write()` – allows recording of **any primitive data type**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "- [BinaryWriter](https://learn.microsoft.com/en-us/dotnet/api/system.io.binaryreader?view=net-7.0)\n",
+    "  - Allows us to **read primitive data types and binary values** recorded using a `BinaryWriter`. Its main **methods** allow us to read: \n",
+    "    - a character \n",
+    "    - an array of characters, \n",
+    "    - integers\n",
+    "    - a floating point number\n",
+    "    - etc."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Text Streams"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "**Text streams** are very similar to binary, but only work with **text data** or rather a **sequence of characters** (`char`) and **strings** (`string`).    \n",
+    "  \n",
+    "**Text streams** are ideal for working with text files. On the other hand, this makes them unsuitable when working with any binaries."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The main classes for working with **text streams** in $.NET$ are: "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "- [TextReader](https://learn.microsoft.com/en-us/dotnet/api/system.io.textreader?view=net-7.0)\n",
+    "- [TextWriter](https://learn.microsoft.com/en-us/dotnet/api/system.io.textwriter?view=net-7.0)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "These classes define the basic functionality for reading and writing for the classes that inherit them. Their more important methods, respectively, are:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "- `ReadLine()`\n",
+    "  - reads one line of text and returns a string. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "- `ReadToEnd()` \n",
+    "  - reads the entire stream to its end and returns a string. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "- `Write()` \n",
+    "  - writes a string to the stream. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "- `WriteLine()`\n",
+    "  - writes one line of text into the stream."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "However, it is important to note that, as these are **abstract classes**, they **cannot be instantiated**, but the *may* be **inherited from**.\n",
+    "   \n",
+    "For example, two classes of significant importance, `StreamReader` and `StreamWriter`, directly inherit the `TextReader` and `TextWriter` classes and implement functionality for **reading and writing textual information to and from a file**."
    ]
   }
  ],
