modified:   15. Text Files/Streams.ipynb

--- a/15. Text Files/Streams.ipynb
+++ b/15. Text Files/Streams.ipynb
@@ -736,21 +736,7 @@
     }
    },
    "source": [
-    "The main classes for working with **text streams** in $.NET$ are: "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
+    "The main classes for working with **text streams** in $.NET$ are: \n",
     "- [TextReader](https://learn.microsoft.com/en-us/dotnet/api/system.io.textreader?view=net-7.0)\n",
     "- [TextWriter](https://learn.microsoft.com/en-us/dotnet/api/system.io.textwriter?view=net-7.0)"
    ]
