modified:   15. Text Files/Streams.ipynb

--- a/15. Text Files/Streams.ipynb
+++ b/15. Text Files/Streams.ipynb
@@ -768,8 +768,7 @@
     }
    },
    "source": [
-    "- `ReadLine()`\n",
-    "  - reads one line of text and returns a string. "
+    "- `ReadLine()` - reads one line of text and returns a string. "
    ]
   },
   {
@@ -784,8 +783,7 @@
     }
    },
    "source": [
-    "- `ReadToEnd()` \n",
-    "  - reads the entire stream to its end and returns a string. "
+    "- `ReadToEnd()`  - reads the entire stream to its end and returns a string. "
    ]
   },
   {
@@ -800,8 +798,7 @@
     }
    },
    "source": [
-    "- `Write()` \n",
-    "  - writes a string to the stream. "
+    "- `Write()`  - writes a string to the stream. "
    ]
   },
   {
@@ -816,8 +813,7 @@
     }
    },
    "source": [
-    "- `WriteLine()`\n",
-    "  - writes one line of text into the stream."
+    "- `WriteLine()` - writes one line of text into the stream."
    ]
   },
   {
