modified:   15. Text Files/Streams.ipynb

--- a/15. Text Files/Streams.ipynb
+++ b/15. Text Files/Streams.ipynb
@@ -828,7 +828,7 @@
     }
    },
    "source": [
-    "However, it is important to note that, as these are **abstract classes**, they **cannot be instantiated**, but the *may* be **inherited from**.\n",
+    "However, it is important to note that, as these are **abstract classes**, they **cannot be instantiated**, but they *can* be **inherited from**.\n",
     "   \n",
     "For example, two classes of significant importance, `StreamReader` and `StreamWriter`, directly inherit the `TextReader` and `TextWriter` classes and implement functionality for **reading and writing textual information to and from a file**."
    ]
