modified:   15. Text Files/Streams.ipynb

--- a/15. Text Files/Streams.ipynb
+++ b/15. Text Files/Streams.ipynb
@@ -832,6 +832,56 @@
     "   \n",
     "For example, two classes of significant importance, `StreamReader` and `StreamWriter`, directly inherit the `TextReader` and `TextWriter` classes and implement functionality for **reading and writing textual information to and from a file**."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Relationship between Text and Binary Streams"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "When **writing** text, hidden from us, the class `StreamWriter` **transforms the text into bytes** before recording it at the current position in the file.   \n",
+    "For this purpose, it uses the character encoding, which is set during its creation. \n",
+    "   \n",
+    "The `StreamReader` class works similarly. It uses `StringBuilder` internally and, when **reading** binary data from a file, it **converts the received bytes to text** before sending the text back as a result from reading.  \n",
+    "   \n",
+    "Bear in mind that text *streams* work with text *lines*, that is, they interpret binary data as **a sequence of text lines**, separated from each other with a **new line separators**."
+   ]
   }
  ],
  "metadata": {
