new file:   15. Text Files/ExampleText/Fish.txt modified:   15. Text Files/StreamReader and StreamWriter.ipynb

--- a/15. Text Files/StreamReader and StreamWriter.ipynb
+++ b/15. Text Files/StreamReader and StreamWriter.ipynb
@@ -30,22 +30,353 @@
     "## `StreamReader` and `StreamWriter`\n",
     "---"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### `StreamReader` Class for Reading a Text File"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "While $C\\#$ provides several ways to read files, not all are easy and intuitive to use. This is why we will use the `System.IO.StreamReader` class, which provides the easiest way to read a text file, as it resembles reading from the console."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "using System.IO;"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Identifying a Text File for Reading"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Let's say we have the following file, `Fish.txt`, residing in some `ExampleText` directory, which we would like to read:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```\n",
+    "One Fish\n",
+    "Two Fish\n",
+    "Red Fish\n",
+    "Blue Fish\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Full V.S. Relative Paths"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "When searching for the file, we can use either: \n",
+    "- a **full path** (e.g. `C:\\PathToDirectory\\ExampleText\\Fish.txt`) \n",
+    "- a **relative path** to the directory from which the application was started (e.g. `ExampleText\\Fish.txt`)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "If you use **full paths**, do not forget to apply **escaping of slashes**.    \n",
+    "In $C\\#$, you can do this in two ways:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// By escaping the Slashes\n",
+    "string fullPathEscapedSlashes = \"C:\\\\PathToDirectory\\\\ExampleText\\\\Fish.txt\";"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// By using a Verbatim string\n",
+    "string fullPathVerbatim = @\"C:\\PathToDirectory\\ExampleText\\Fish.txt\";"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Although the use of relative paths is more difficult because you have to take into account the directory structure of your project which may change during the life of the project, it is **highly recommended avoiding full paths**."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Using the full path to a file is bad practice because it makes your application dependent on the environment and also nontransferable. If you transfer it to another computer, you will need to correct paths to the files. However, if you use a relative path to the current directory (e.g. `ExampleText\\Fish.txt`), your program will be easily portable."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Reading a Text File Line by Line and Manually Closing the File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// First, we open a stream to the input file \n",
+    "// by creating in instance of the StreadReader class \n",
+    "// which reads from our desired input source\n",
+    "StreamReader reader = new StreamReader( @\"ExampleText\\Fish.txt\" );\n",
+    "\n",
+    "\n",
+    "// We then initialize a variable which will account for \n",
+    "// each concurrent line number \n",
+    "int lineNumber = 0;\n",
+    "\n",
+    "\n",
+    "// We may now read in the first line of the input\n",
+    "string line = reader.ReadLine();\n",
+    "\n",
+    "\n",
+    "// From here, \n",
+    "// Iterating While the current line still has valid data to be read:\n",
+    "while( line != null )\n",
+    "{\n",
+    "\n",
+    "    // Print the current line number, along with the line itself,\n",
+    "    // taking care to simultaneously increment the line number afterwards\n",
+    "    Console.WriteLine( $\"Line {lineNumber++}: {line}\" );\n",
+    "\n",
+    "\n",
+    "    // Clobber the old line with the next concurrent line\n",
+    "    line = reader.ReadLine();\n",
+    "\n",
+    "}\n",
+    "\n",
+    "\n",
+    "// After all that,\n",
+    "// The file has been successfully read.\n",
+    "// Close the file stream to avoid resource conflicts\n",
+    "reader.Close();"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "thunderDome",
-   "language": "python",
-   "name": "python3"
+   "display_name": ".NET (C#)",
+   "language": "C#",
+   "name": ".net-csharp"
   },
-  "language_info": {
-   "name": "python",
-   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
-  },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "bade8211235ab644dd17f0cd83f594f159209fad98c582b972f18f95884606a8"
+  "polyglot_notebook": {
+   "kernelInfo": {
+    "defaultKernelName": "csharp",
+    "items": [
+     {
+      "aliases": [],
+      "name": "csharp"
+     }
+    ]
    }
   }
  },
