modified:   15. Text Files/StreamReader and StreamWriter.ipynb

--- a/15. Text Files/StreamReader and StreamWriter.ipynb
+++ b/15. Text Files/StreamReader and StreamWriter.ipynb
@@ -204,7 +204,7 @@
     }
    },
    "source": [
-    "If you use **full paths**, do not forget to apply **escaping of slashes**.    \n",
+    "When specifying a path, do not forget to apply **escaping of slashes**.    \n",
     "In $C\\#$, you can do this in two ways:"
    ]
   },
@@ -347,21 +347,21 @@
     "\n",
     "\n",
     "// We may now read in the first line of the input\n",
-    "string line = reader.ReadLine();\n",
+    "string currentLine = reader.ReadLine();\n",
     "\n",
     "\n",
     "// From here, \n",
     "// Iterating While the current line still has valid data to be read:\n",
-    "while( line != null )\n",
+    "while( currentLine != null )\n",
     "{\n",
     "\n",
     "    // Print the current line number, along with the line itself,\n",
     "    // taking care to simultaneously increment the line number afterwards\n",
-    "    Console.WriteLine( $\"Line {lineNumber++}: {line}\" );\n",
+    "    Console.WriteLine( $\"Line {lineNumber++}: {currentLine}\" );\n",
     "\n",
     "\n",
     "    // Clobber the old line with the next concurrent line\n",
-    "    line = reader.ReadLine();\n",
+    "    currentLine = reader.ReadLine();\n",
     "\n",
     "}\n",
     "\n",
@@ -370,6 +370,188 @@
     "// The file has been successfully read.\n",
     "// Close the file stream to avoid resource conflicts\n",
     "reader.Close();"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Reading a Text File Line by Line and Automatically Closing the File"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Very often, novice programmers forget to call the `Close()` method, thus blocking the file they use. This causes resource leakage and can lead to very unpleasant effects like program hanging, program misbehavior and strange errors."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "To avoid this issue, it is advisable to **bypass the file closing requirement** with the `using` keyword, as generalized below:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "using ( streamObjectName )\n",
+    "{\n",
+    "    // read the stream object and do something with it\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Below, we'll see how implementing the `using()` construct simplifies the process by **automatically closing the file**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Line 0: One Fish\n",
+      "Line 1: Two Fish\n",
+      "Line 2: Red Fish\n",
+      "Line 3: Blue Fish\n"
+     ]
+    }
+   ],
+   "source": [
+    "// First, we open a stream to the input file \n",
+    "// by creating in instance of the StreadReader class \n",
+    "// which reads from our desired input source\n",
+    "StreamReader reader = new StreamReader( @\"ExampleText\\Fish.txt\" );\n",
+    "\n",
+    "\n",
+    "// Invoke the using construct to ensure \n",
+    "// that the file stream will be closed after processing the data\n",
+    "using ( reader )\n",
+    "{\n",
+    "\n",
+    "    // We then initialize a variable which will account for \n",
+    "    // each concurrent line number \n",
+    "    int lineNumber = 0;\n",
+    "\n",
+    "\n",
+    "    // We may now read in the first line of the input\n",
+    "    string currentLine = reader.ReadLine();\n",
+    "\n",
+    "\n",
+    "    // From here, \n",
+    "    // Iterating While the current line still has valid data to be read:\n",
+    "    while( currentLine != null )\n",
+    "    {\n",
+    "\n",
+    "        // Print the current line number, along with the line itself,\n",
+    "        // taking care to simultaneously increment the line number afterwards\n",
+    "        Console.WriteLine( $\"Line {lineNumber++}: {currentLine}\" );\n",
+    "\n",
+    "\n",
+    "        // Clobber the old line with the next concurrent line\n",
+    "        currentLine = reader.ReadLine();\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "    // After all that,\n",
+    "    // The file has been successfully read\n",
+    "\n",
+    "}\n",
+    "\n",
+    "// Here, we can be sure that\n",
+    "// The file stream has been closed automatically"
    ]
   }
  ],
